<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zcard.feature.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/unity_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/img_btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_circle_white_70"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/common_cd_back_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_arrow_left" />

        <ImageButton
            android:id="@+id/img_btn_link"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/bg_circle_white_70"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/editor_cd_link_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_complete"
            app:srcCompat="@drawable/ic_link" />

        <android.widget.Button
            android:id="@+id/btn_complete"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            android:paddingHorizontal="18dp"
            android:background="@drawable/bg_rounded_rect_white_70"
            android:contentDescription="@string/editor_cd_complete_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/soft_black"
            android:textAllCaps="false"
            android:text="@string/editor_button_complete" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_text_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="20dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/unity_container">

        <ImageButton
            android:id="@+id/img_btn_add_text"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:background="@drawable/bg_circle_black_30_border_white"
            android:contentDescription="@string/editor_cd_add_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_plus" />

        <androidx.compose.ui.platform.ComposeView
            android:id="@+id/compose_container_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/img_btn_add_text"
            app:layout_constraintEnd_toStartOf="@+id/img_btn_delete_text"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
            android:id="@+id/img_btn_delete_text"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/bg_circle_black_30_border_white"
            android:contentDescription="@string/editor_cd_delete_text"
            app:layout_constraintEnd_toStartOf="@+id/img_btn_camera_focus_reset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/ic_trash_bin"
            app:tint="#FFFFFF" />

        <ImageButton
            android:id="@+id/img_btn_camera_focus_reset"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_circle_black_30_border_white"
            android:contentDescription="@string/editor_cd_transform_reset_img_button"
            android:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_fit_screen"
            app:tint="#FFFFFF" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_object_option"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/unity_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/img_btn_delete"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_circle_white"
            android:contentDescription="@string/editor_cd_delete_img_button"
            android:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_trash_bin" />

        <android.widget.Button
            android:id="@+id/btn_adjust"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@drawable/bg_rounded_rect_white"
            android:backgroundTint="#FFFFFF"
            android:textColor="@color/soft_black"
            android:text="@string/editor_button_adjust"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/compose_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unity_container"/>

    <!-- elevation으로 Z 우선순위를 높임 -->
    <FrameLayout
        android:id="@+id/frame_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:elevation="10dp"
        android:clickable="true"
        android:focusable="true">

        <androidx.compose.ui.platform.ComposeView
            android:id="@+id/compose_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>