<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zcard.feature.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/unity_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_text_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/unity_container">

        <ImageButton
            android:id="@+id/img_btn_add_text"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:background="@drawable/bg_circle_black_30_border_white"
            android:contentDescription="@string/editor_cd_add_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_plus" />

        <androidx.compose.ui.platform.ComposeView
            android:id="@+id/compose_container_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/img_btn_add_text"
            app:layout_constraintEnd_toStartOf="@+id/img_btn_delete_text"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
            android:id="@+id/img_btn_delete_text"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/bg_circle_black_30_border_white"
            android:contentDescription="@string/editor_cd_delete_text"
            app:layout_constraintEnd_toStartOf="@+id/img_btn_camera_focus_reset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/ic_trash_bin"
            app:tint="#FFFFFF" />

        <ImageButton
            android:id="@+id/img_btn_camera_focus_reset"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_circle_black_30_border_white"
            android:contentDescription="@string/editor_cd_transform_reset_img_button"
            android:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_fit_screen"
            app:tint="#FFFFFF" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/compose_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unity_container"/>

</androidx.constraintlayout.widget.ConstraintLayout>