<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zcard.feature.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/unity_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_transform_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/unity_container">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_object_thumb"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintStart_toStartOf="@+id/container_transform_option"
            app:layout_constraintBottom_toBottomOf="@+id/container_transform_option">

            <ImageView
                android:id="@+id/img_object_thumb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/transform_cd_object_thumb"
                android:foreground="@drawable/bg_rounded_rect_border"
                android:scaleType="centerCrop"
                android:src="@drawable/thumb_m_placeholder" />

            <TextView
                android:id="@+id/text_element_key"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:background="@drawable/bg_rounded_rect_black_10"
                android:gravity="center"
                android:padding="4dp"
                android:textAlignment="center"
                android:textSize="12sp" />

        </androidx.cardview.widget.CardView>

        <ImageButton
            android:id="@+id/img_btn_transform_reset"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/bg_circle_white"
            android:contentDescription="@string/transform_cd_reset_button"
            android:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/img_btn_camera_focus_controller"
            app:srcCompat="@drawable/ic_reset" />

        <ImageButton
            android:id="@+id/img_btn_camera_focus_controller"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_circle_white"
            android:contentDescription="@string/transform_cd_camera_focus_button"
            android:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_fit_screen" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/compose_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unity_container"/>

</androidx.constraintlayout.widget.ConstraintLayout>